--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <nav>
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="overmij.html">Over mij</a></li>
-                    <li><a href="info.html">Informatie</a></li>
+                    <li><a href="geschiedenis.html">geschiedenis</a></li>
+                    <li><a href="bezienswaardigheden.html">bezienswaardigheden</a></li>
                 </ul>
             </nav>
             
