--- a/bezienswaardigheden.html
+++ b/bezienswaardigheden.html
@@ -17,8 +17,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="overmij.html">Over mij</a></li>
-                    <li><a class="active" href="info.html">Informatie</a></li>
+                    <li><a href="geschiedenis.html">geschiedenis</a></li>
+                    <li><a class="active" href="bezienswaardigheden.html">bezienswaardigheden</a></li>
                 </ul>
             </nav>
             
