--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1>Wil je meer van mij weten?</h1>
+                <h1>hoe is deze stad tot stand gekomen?</h1>
                 <br>
             </header>
             
