--- a/bezienswaardigheden.html
+++ b/bezienswaardigheden.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <h1>Informatie overal!</h1>
+                <h1>wat te doen in Parijs?</h1>
                 <br>
             </header>
             
