--- a/bezienswaardigheden.html
+++ b/bezienswaardigheden.html
@@ -4,7 +4,7 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Dit is een eenvoudige website</title>
+        <title>bezienswaardigheden over Parijs</title>
     </head>
     
     <body>
