--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Dit is een eenvoudige website</title>
+        <title>Dit is de hoofdpagina van de website</title>
     </head>
     
     <body>
@@ -18,6 +18,7 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="geschiedenis.html">geschiedenis</a></li>
                     <li><a href="bezienswaardigheden.html">bezienswaardigheden</a></li>
+                    <li><a href="restauranttips.html">restaurant tips</a></li>
                 </ul>
             </nav>
             
