tekst en css aangepast
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/eten.html
+++ b/eten.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="geschiedenis.html">geschiedenis</a></li>
                     <li><a href="bezienswaardigheden.html">bezienswaardigheden</a></li>
-                    <li><a class="active" href="culinaireten.html">culinair eten</a></li>
+                    <li><a class="active" href="eten.html">culinair eten</a></li>
                 </ul>
             </nav>
             
