--- a/bezienswaardigheden.html
+++ b/bezienswaardigheden.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="geschiedenis.html">geschiedenis</a></li>
                     <li><a class="active" href="bezienswaardigheden.html">bezienswaardigheden</a></li>
-                    <li><a href="culinaireten.html">culinair eten</a></li>
+                    <li><a href="eten.html">culinair eten</a></li>
                 </ul>
             </nav>
             
