titels en css aangepast
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/recepten.html
+++ b/recepten.html
@@ -10,16 +10,17 @@
     <body>
         <main>
             <header>
-                <h1>wat te doen in Parijs?</h1>
+                <h1>de lekkerste glutenvrije recepten</h1>
                 <br>
             </header>
             
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="geschiedenis.html">geschiedenis</a></li>
-                    <li><a class="active" href="bezienswaardigheden.html">bezienswaardigheden</a></li>
-                    <li><a href="eten.html">culinair eten</a></li>
+                    <li><a href="coeliakie.html">coeliakie?</a></li>
+                    <li><a class="active" href="recepten.html">recepten</a></li>
+                    <li><a href="kookenbakboeken.html">kook en bakboeken</a></li>
+                    <li><a href="producten.html">glutenvrije producten</a></li>
                 </ul>
             </nav>
             
