tekst geschreven en links toegevoegd
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/kookenbakboeken.html
+++ b/kookenbakboeken.html
@@ -32,10 +32,14 @@
              <ol>
                     <li><a target="_blank" href="https://www.bruna.nl/boeken/bakken-zonder-gluten-9789461317148?gclid=Cj0KCQiA2af-BRDzARIsAIVQUOdEI2GhtoENe7Kgv4qBbUf9A0a9fid7qhiM-IRc6TDe965gjLmfdB0aAtt2EALw_wcB"> Bakken zonder gluten</a></li>
                     <p>In dit boek van Emmelou green, bekend van haar blog 'Bakers and Fakers' staan 100 glutenvrije recepten. Met dit boek kan je zonder veel moeite allemaal lekkere recepten maken. Dit bakboek is tijdloos en er staan veel recepten in waarvan je niet wist dat ze glutenvrij konden worden gemaakt. </p>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
+                    <li><a target="_blank" href="https://www.bol.com/nl/p/de-gluut/9200000044136184/?Referrer=ADVNLPPcef2140015e0bcb00065bba51d011104041&utm_source=1104041&utm_medium=Affiliates&utm_campaign=CPS&utm_content=pdl">de gluut</a></li>
+                    <p>Dit kookboek van Pauline Kalkhove is gluten, lactose en suikervrij. Het boek staat vol met lekkere bourgondische recepten en mooie foto's. Pauline schreef dit boek niet alleen voor mensen met bijvoorbeeld coeliakie, maar ook voor mensen die geen allergie hebben. Het is namelijk ook goed om af en toe even wat minder gluten, melk en suiker te eten, want zonder dat je het weet krijg je er veel van binnen.</p>
+                    <li><a target="_blank" href="https://www.bol.com/nl/p/heerlijk-glutenvrij-bakken/1001004011234764/?Referrer=ADVNLGOO002008J-G-106159605000-S-862379619562-1001004011234764&gclid=CjwKCAiAn7L-BRBbEiwAl9UtkD-yoF9TKu8di5DKJwIUmy3AJ9M8VZmyxF004_qlDP_wXBh3b9E5qxoCmEUQAvD_BwE">heerlijk glutenvrij bakken</a></li>
+                    <p>In dit bakboek van Philip Bailey staan de lekkerste recepten om glutenvrij broden, gebakjes en desserts te maken. Dit is wat de meeste mensen met coeliakie missen, omdat er bijna altijd in brood, gebakjes en dessert wel gluten zitten. Dit is vaak een gemis als mensen op glutenvrij dieet gaan. Het is een goed uitgevoerd boek met mooi foto's en duidelijke, verrassende recepten. </p>
+                    <li><a target="_blank" href="https://www.foodless.nl/product/foodless-kookboek/">Foodless</a></li>
+                    <p>Dit kook en bakboek van Carlijn Bröring is een allergievrij boek met 90 recepten. Het boek heeft zowel kook als bak recepten en is een uitkomst voor mensen die nog niet zo lang allergievrij eten, dus ook voor mensen met coeliakie is dit een prima boek met genoeg inspiratie. Let wel op dat je dit boek op de site van foodless koopt, want de prijzen verschillen erg. </p>
+                    <li><a target="_blank" href="https://www.bol.com/nl/p/hoe-je-glutenvrij-eet-en-toch-je-vrienden-houdt/9200000108382419/?Referrer=ADVNLPPcef21400cdbf92970065bba51d011104041&utm_source=1104041&utm_medium=Affiliates&utm_campaign=CPS&utm_content=pdl">Hoe je glutenvrij eet en toch je vrienden houdt</a></li>
+                    <p>Als je coeliake hebt en je gaat op glutenvrij dieet, dan heeft dat niet alleen gevolgen voor jou. De mensen om jou heen moeten daar ook in meegaan, maar hoe makke je lekkere en glutenvrije recepten die ook je partner of vrienden lekkeer vinden? Anna Barnett geeft je in dit boek 50 heerlijke glutenvrij recepten, dat je helpt om te leven zonder compromissen en verontschuldigingen. Ook staan er tips, hacks en trucs in om een betere gluten vermijder te worden.</p>
                 </ol>    
             </article>
         
