--- a/coeliakie.html
+++ b/coeliakie.html
@@ -21,7 +21,7 @@
                     <li><a class="active" href="coeliakie.html">coeliakie</a></li>
                     <li><a href="recepten.html">recepten</a></li>
                     <li><a href="kookenbakboeken.html">kook en bakboeken</a></li>
-                    <li><a href="producten.html">glutenvrije producten</a></li>
+                    <li><a href="producten.html">merken & producten</a></li>
                 </ul>
             </nav>
             
