--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="coeliakie.html">coeliakie?</a></li>
                     <li><a href="recepten.html">recepten</a></li>
                     <li><a href="kookenbakboeken.html">kook en bakboeken</a></li>
-                    <li><a href="producten.html">glutenvrije producten</a></li>
+                    <li><a href="producten.html">merken & producten</a></li>
                 </ul>
             </nav>
             
