--- a/producten.html
+++ b/producten.html
@@ -21,13 +21,14 @@
                     <li><a href="coeliakie.html">coeliakie?</a></li>
                     <li><a href="recepten.html">recepten</a></li>
                     <li><a href="kookenbakboeken.html">kook en bakboeken</a></li>
-                    <li><a class="active" href="producten.html">glutenvrije producten</a></li>
+                    <li><a class="active" href="producten.html">merken & producten</a></li>
                 </ul>
             </nav>
             
             
             <article>
-                <p>De persoonlijkheid is een begrip uit de psychologie en omvat een dynamisch en georganiseerd geheel van karakteristieken (voelen, denken, doen) die aan een persoon kunnen worden toegekend. Dit geheel van eigenschappen beschrijft de manier waarop een persoon in verschillende situaties zal reageren, de manier waarop hij denkt, en waardoor hij gemotiveerd zal worden.</p>
+            <h4>Glutenvrije merken en producten</h4>
+                <p>glutenvrij eten is niet alleen moeilijk, omdat je opeens allemaal dingen niet meer kan eten, maar ook omdat er nog niet zo veel glutenvrije producten en merken zijn. Gelukkig wordt glutenvrij eten steeds normaler en komen er ook steeds meer glutenvrije producten en merken. Hieronder vindt je merken, producten die glutenvrij zijn.</p>
                 <p>De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij onveranderlijke) aard van die persoon wordt beschouwd.</p>
                 <p>De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
             </article>
