--- a/producten.html
+++ b/producten.html
@@ -44,6 +44,11 @@
 
                 <h4>glutenvrij webshops</h4>
                 <p>Ondanks dat je in de supermarkt best veel glutenvrije producten kunt kopen, kun je er niet alles kopen. Daarom is het fijn dat er ook glutenvrijwebshops zijn waar een groot aanbod is aan glutenvrije producten. Hieronder staan een aantal glutenvrije webshops die aan de te raden zijn.</p>
+                <ul>
+                <li><a target="_blank" href="https://www.glutenvrijewebshop.nl/bfree.html?gclid=CjwKCAiAn7L-BRBbEiwAl9UtkOk9fxwLOEAyRPkRVVZP5IHSN_lvTOxridPw6jTpPh-N2ODuJiYLXxoC4OAQAvD_BwE">de glutenvrijewebshop.nl</a></li></br>
+                <li><a target="_blank" href="https://www.glutenvrijemarkt.com">glutenvrijemarkt.com</a></li></br>
+                <li><a target="_blank" href="https://www.hollandandbarrett.nl">Holland&Barrett.nl</a></li></br>
+                </ul>
 
             </article>
         
