--- a/kookenbakboeken.html
+++ b/kookenbakboeken.html
@@ -32,10 +32,10 @@
              <ol>
                     <li><a target="_blank" href="https://www.bruna.nl/boeken/bakken-zonder-gluten-9789461317148?gclid=Cj0KCQiA2af-BRDzARIsAIVQUOdEI2GhtoENe7Kgv4qBbUf9A0a9fid7qhiM-IRc6TDe965gjLmfdB0aAtt2EALw_wcB"> Bakken zonder gluten</a></li>
                     <p>In dit boek van Emmelou green, bekend van haar blog 'Bakers and Fakers' staan 100 glutenvrije recepten. Met dit boek kan je zonder veel moeite allemaal lekkere recepten maken. Dit bakboek is tijdloos en er staan veel recepten in waarvan je niet wist dat ze glutenvrij konden worden gemaakt.</p>
-                    <img src="afbeeldingen/loremipsum.jpg">
+                    <img class="boeken" src="afbeeldingen/bakkenzondergluten.jpg">
                     <li><a target="_blank" href="https://www.bol.com/nl/p/de-gluut/9200000044136184/?Referrer=ADVNLPPcef2140015e0bcb00065bba51d011104041&utm_source=1104041&utm_medium=Affiliates&utm_campaign=CPS&utm_content=pdl">de gluut</a></li>
                     <p>Dit kookboek van Pauline Kalkhove is gluten, lactose en suikervrij. Het boek staat vol met lekkere bourgondische recepten en mooie foto's. Pauline schreef dit boek niet alleen voor mensen met bijvoorbeeld coeliakie, maar ook voor mensen die geen allergie hebben. Het is namelijk ook goed om af en toe even wat minder gluten, melk en suiker te eten, want zonder dat je het weet krijg je er veel van binnen. </p>
-                    <img src="afbeeldingen/loremipsum.jpg">
+                    <img class="kookboek" src="afbeeldingen/loremipsum.jpg">
                     <li><a target="_blank" href="https://www.bol.com/nl/p/heerlijk-glutenvrij-bakken/1001004011234764/?Referrer=ADVNLGOO002008J-G-106159605000-S-862379619562-1001004011234764&gclid=CjwKCAiAn7L-BRBbEiwAl9UtkD-yoF9TKu8di5DKJwIUmy3AJ9M8VZmyxF004_qlDP_wXBh3b9E5qxoCmEUQAvD_BwE">heerlijk glutenvrij bakken</a></li>
                     <p>In dit bakboek van Philip Bailey staan de lekkerste recepten om glutenvrij broden, gebakjes en desserts te maken. Dit is wat de meeste mensen met coeliakie missen, omdat er bijna altijd in brood, gebakjes en dessert wel gluten zitten. Dit is vaak een gemis als mensen op glutenvrij dieet gaan. Het is een goed uitgevoerd boek met mooi foto's en duidelijke, verrassende recepten. </p>
                     <img src="afbeeldingen/loremipsum.jpg">
