css aangepast en plaatjes toegevoegd
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/producten.html
+++ b/producten.html
@@ -29,20 +29,27 @@
             <article>
             <h2>Glutenvrije merken en producten</h2>
                 <p>glutenvrij eten is niet alleen moeilijk, omdat je opeens allemaal dingen niet meer kan eten, maar ook omdat er nog niet zo veel glutenvrije producten en merken zijn. Gelukkig wordt glutenvrij eten steeds normaler en komen er ook steeds meer glutenvrije producten en merken. Hieronder vindt je merken, producten die glutenvrij zijn.</p>
+            </article>
+            <article>
                  <h4>Damhert</h4>
                 <img class="zweeflinks" src="afbeeldingen/loremipsum.jpg"><p class="tekst">Damhert is een merk dat veel verschillende producten verkoopt, zoals koek, brood, pasta, granen en rijst. Ze verkopen niet alleen glutenvrije producten, maar ook lactose vrij, producten met minder suikers, vegetarisch en veganistisch. De producten van Damhert zijn te vinden in de supermakrt, maar je kan ze ook online vinden. <a target="_blank href="https://www.damhert.com>klik hier</a></p>
+            </article>
+            <article>
                 <h4>Schär</h4>
-                <img class="zweeflinks2" src="afbeeldingen/loremipsum.jpg"><p class="tekst2"> Schär is een van de bekenste merken met een groot assortiment aan glutenvrij producten. Ze verkopen vooral broden, pizza's en pasta. Deze producten zijn het moeilijkst om glutenvrij te krijgen, dus het is heel fijn dat Schär deze producten glutenvrij maakt. Schär producten worden in vrijwel alle supermakrten verkocht en je kan ze ook online kopen.jakall;alalallakljakjlakljalkjalaljkajlkaljkallaldaafaddaaf <a target="_blank" href="https://www.schaer.com/nl-nl/producten">klik hier</a></p>
+                <img class="zweeflinks2" src="afbeeldingen/loremipsum.jpg"><p class="tekst2"> Schär is een van de bekenste merken met een groot assortiment aan glutenvrij producten. Ze verkopen vooral broden, pizza's en pasta. Deze producten zijn het moeilijkst om glutenvrij te krijgen, dus het is heel fijn dat Schär deze producten glutenvrij maakt. Schär producten worden in vrijwel alle supermakrten verkocht en je kan ze ook online kopen. <a target="_blank" href="https://www.schaer.com/nl-nl/producten">klik hier</a></p>
+            </article>
+            <article>
                 <h4>Peak's Free From</h4>
                 <img class="zweeflinks" src="afbeeldingen/loremipsum.jpg"><p class="tekst2">Peak's Free from verkopen veel glutenvrije mixen en degen, zoals pannenkoekenmix, broodmix en paneermeel. Peak's Free from verkoopt niet alleen glutenvrije producten, maar ook ei en lactosevrij. Alle producten zijn glutenvrij en sluiten daarnaast dus ook vaak andere allergenen uit. <a target="_blank" href="http://www.peaks-freefrom.com/nl/free-from-/">klik hier</a></p>
-                <h4>Bfree</h4>
-                <img class="zweeflinks2" src="afbeeldingen/loremipsum.jpg"><p class="tekst2">Als je denkt coeliakie te hebben kun je daar achter komen door een bloedtest te doen. Als je coeliakie hebt zal de kans groot zijn dat er antistoffen in je bloed hebt. Als er geen antistoffen in het bloed zijn gevonden, hoeft dat niet te betekenen dat je geen coeliakie hebt. Een klein deel van de mensen maken geen antistoffen aan. Dan is het handig om verder onderzoek te doen. Voor verder onderzoek kom je uit bij de MDL arts. Hij zal een biopt nemen van de dunne darm. Tijdens dit onderzoek zullen er kleine hapjes van het weefsel van de dunne darm worden genomen. In het lab kunnen ze dan zien of je darmen beschadigd zijn.</p>
-
+             </article>
+             <article>
                 <h4>glutenvrij aanbod in supermarkten</h4>
                 <p>In de supermarkten komen steeds meer glutenvrij producten. In veel supermarkten is er zelfs een afdeling met biologische en glutenvrije producten. de Albert Heijn heeft zelfs een eigen glutenvrij merk, dat Vrij gluten heet. Dit is een goed merk. De producten zijn vooral mixen, zoals pannenkoekenmix en meel. De lidl heeft lekkere glutenvrije pasta en ook de Jumbo heeft een vrij groot assortiment aan glutenvrij producten.</p>
-
+            </article>
+            <article>
                 <h4>glutenvrije webshops</h4>
                 <p>Ondanks dat je in de supermarkt best veel glutenvrije producten kunt kopen, kun je er niet alles kopen. Daarom is het fijn dat er ook glutenvrijwebshops zijn waar een groot aanbod is aan glutenvrije producten. Hieronder staan een aantal glutenvrije webshops die aan de te raden zijn.</p>
+            
                 <ul>
                 <li><a target="_blank" href="https://www.glutenvrijewebshop.nl/bfree.html?gclid=CjwKCAiAn7L-BRBbEiwAl9UtkOk9fxwLOEAyRPkRVVZP5IHSN_lvTOxridPw6jTpPh-N2ODuJiYLXxoC4OAQAvD_BwE">de glutenvrijewebshop.nl</a></li></br>
                 <li><a target="_blank" href="https://www.glutenvrijemarkt.com">glutenvrijemarkt.com</a></li></br>
