--- a/producten.html
+++ b/producten.html
@@ -32,15 +32,15 @@
             </article>
             <article>
                  <h4>Damhert</h4>
-                <img class="zweeflinks" src="afbeeldingen/loremipsum.jpg"><p class="tekst">Damhert is een merk dat veel verschillende producten verkoopt, zoals koek, brood, pasta, granen en rijst. Ze verkopen niet alleen glutenvrije producten, maar ook lactose vrij, producten met minder suikers, vegetarisch en veganistisch. De producten van Damhert zijn te vinden in de supermakrt, maar je kan ze ook online vinden. <a target="_blank href="https://www.damhert.com>klik hier</a></p>
+                <img class="afbeelding" src="afbeeldingen/damhert.jpg"><p class="tekst">Damhert is een merk dat veel verschillende producten verkoopt, zoals koek, brood, pasta, granen en rijst. Ze verkopen niet alleen glutenvrije producten, maar ook lactose vrij, producten met minder suikers, vegetarisch en veganistisch. De producten van Damhert zijn te vinden in de supermakrt, maar je kan ze ook online vinden. <a target="_blank href="https://www.damhert.com>klik hier</a></p>
             </article>
             <article>
                 <h4>Schär</h4>
-                <img class="zweeflinks2" src="afbeeldingen/loremipsum.jpg"><p class="tekst2"> Schär is een van de bekenste merken met een groot assortiment aan glutenvrij producten. Ze verkopen vooral broden, pizza's en pasta. Deze producten zijn het moeilijkst om glutenvrij te krijgen, dus het is heel fijn dat Schär deze producten glutenvrij maakt. Schär producten worden in vrijwel alle supermakrten verkocht en je kan ze ook online kopen. <a target="_blank" href="https://www.schaer.com/nl-nl/producten">klik hier</a></p>
+                <img class="afbeeldingrechts" src="afbeeldingen/schar.jpg"><p class="tekst2"> Schär is een van de bekenste merken met een groot assortiment aan glutenvrij producten. Ze verkopen vooral broden, pizza's en pasta. Deze producten zijn het moeilijkst om glutenvrij te krijgen, dus het is heel fijn dat Schär deze producten glutenvrij maakt. Schär producten worden in vrijwel alle supermakrten verkocht en je kan ze ook online kopen. <a target="_blank" href="https://www.schaer.com/nl-nl/producten">klik hier</a></p>
             </article>
             <article>
                 <h4>Peak's Free From</h4>
-                <img class="zweeflinks" src="afbeeldingen/loremipsum.jpg"><p class="tekst2">Peak's Free from verkopen veel glutenvrije mixen en degen, zoals pannenkoekenmix, broodmix en paneermeel. Peak's Free from verkoopt niet alleen glutenvrije producten, maar ook ei en lactosevrij. Alle producten zijn glutenvrij en sluiten daarnaast dus ook vaak andere allergenen uit. <a target="_blank" href="http://www.peaks-freefrom.com/nl/free-from-/">klik hier</a></p>
+                <img class="afbeelding" src="afbeeldingen/peaks.jpg"><p class="tekst2">Peak's Free from verkopen veel glutenvrije mixen en degen, zoals pannenkoekenmix, broodmix en paneermeel. Peak's Free from verkoopt niet alleen glutenvrije producten, maar ook ei en lactosevrij. Alle producten zijn glutenvrij en sluiten daarnaast dus ook vaak andere allergenen uit. <a target="_blank" href="http://www.peaks-freefrom.com">klik hier</a></p>
              </article>
              <article>
                 <h4>glutenvrij aanbod in supermarkten</h4>
