--- a/kookenbakboeken.html
+++ b/kookenbakboeken.html
@@ -28,7 +28,7 @@
             
             <article>
             <h2>glutenvrij koken en bakken</h2>
-                <p>Elke dag glutenvrij koken en bakken is best een opgave. Er zijn maar weinig glutenvrije kook en bakboeken op de markt. Veel mensen met coeliakie kunnen daarom wel wat tips voor kook en bakboeken gebruiken. Welke kook en bakboeken zijn er? Welke kook en bakboeken zijn aan te raden? Welke kook en bakboeken zijn echt geschikt voor een gluten intolerantie? Hieronder vind je een top 5 van kook en bakboeken die zeker aan te raden zijn!</p>
+                <p>Elke dag glutenvrij koken en bakken is best een opgave. Er zijn maar weinig glutenvrije kook en bakboeken op de markt. Veel mensen met coeliakie kunnen daarom wel wat tips voor kook en bakboeken gebruiken. Welke kook en bakboeken zijn er? Welke kook en bakboeken zijn aan te raden? Welke kook en bakboeken zijn echt geschikt voor een gluten intolerantie? Hieronder vind je 5 kook en bakboeken die zeker aan te raden zijn!</p>
             </article>
             
              <ol>
