--- a/recepten.html
+++ b/recepten.html
@@ -23,11 +23,12 @@
                     <li><a href="producten.html">merken & producten</a></li>
                 </ul>
             </nav>
+
             <article>
             <h3>granola met yoghurt</h3>
-                <img class="recept" src="afbeeldingen/granola.jpg"><p class="tekst">Granola is een goede manier om allerlei soorten gedroogde vruchten, noten en zaden te eten. Vanwegen het vleugje kaneel is het heel lekker en met koude melk of yoghurt is het een perfect ontbijt.</p> 
+                <img class="recept" src="afbeeldingen/granola.jpg"><p>Granola is een goede manier om allerlei soorten gedroogde vruchten, noten en zaden te eten. Vanwegen het vleugje kaneel is het heel lekker en met koude melk of yoghurt is het een perfect ontbijt.</p> 
             </article>  
-                <h4>benodigdheden;</h4>
+                <h4>benodigdheden:</h4>
             <ul>
                 <li>200 g glutenvrij havervlokken</li>
                 <li>150 g gemengde noten (hazelnoten, amandelen, walnoten, pecannoten)</li>
@@ -43,7 +44,7 @@
             
             <article>
                 <h3>glutenvrije rode pasta pesto</h3>
-                <img class="recept2" src="afbeeldingen/pasta.jpg"><p class="tekst3">glutenvrije rode pasta pesto is een heerlijk hoofdgerecht. Glutenvrije pasta is voor mensen met coeliakie echt een uitkomst, want pasta is een van de dingen die je erg kan missen. </p>
+                <img class="recept2" src="afbeeldingen/pasta.jpg"><p>glutenvrije rode pasta pesto is een heerlijk hoofdgerecht. Glutenvrije pasta is voor mensen met coeliakie echt een uitkomst, want pasta is een van de dingen die je erg kan missen. </p>
             </article>
             <article></article>
                 <h4>benodigdheden:</h4>
@@ -62,7 +63,7 @@
         </article>
             <article>
                 <h3>glutenvrije kruidkoek</h3>
-                <img class="recept" src="afbeeldingen/kruidkoek.jpg"><p class="tekst4"> Kruidkoek is typisch nederlands, deze is heel eenvoudig te maken. Een lekker recept om te maken als je visite krijgt!</p>
+                <img class="recept" src="afbeeldingen/kruidkoek.jpg"><p> Kruidkoek is typisch nederlands, deze is heel eenvoudig te maken. Een lekker recept om te maken als je visite krijgt!</p>
             <h4>benodigdheden:</h4>
             <ul>
                 <li>125 g amandelmeel</li>
@@ -89,8 +90,8 @@
             <footer>
                 <hr/>
                 <br>
-                <p>info@emmauscollege.nl</p>
-                <p class="smalltext">copyright A.P. Cammeraat 2016</p>
+                <p>112315@emmauscollege.nl</p>
+                <p class="smalltext">copyright B.F. de Boon 2020</p>
                 <br>
             </footer>
         
