--- a/kookenbakboeken.html
+++ b/kookenbakboeken.html
@@ -63,8 +63,8 @@
             <footer>
                 <hr/>
                 <br>
-                <p>info@emmauscollege.nl</p>
-                <p class="smalltext">copyright A.P. Cammeraat 2016</p>
+                <p>112315@emmauscollege.nl</p>
+                <p class="smalltext">copyright B.F. de Boon 2020</p>
                 <br>
             </footer>
         
