--- a/kookenbakboeken.html
+++ b/kookenbakboeken.html
@@ -4,14 +4,14 @@
 
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>culinair lekker eten</title>
+        <title>kook en bakboeken</title>
         <meta charset="utf-8" />
     </head>
     
     <body>
         <main>
             <header>
-                <h1>glutenvrij aan de kook en bak</h1>
+                <h1 class="titel">glutenvrij aan de kook en bak</h1>
                 <br>
             </header>
             
