--- a/producten.html
+++ b/producten.html
@@ -4,14 +4,14 @@
 
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>culinair lekker eten</title>
+        <title>merken en producten</title>
         <meta charset="utf-8" />
     </head>
     
     <body>
         <main>
             <header>
-                <h1>glutenvrije producten</h1>
+                <h1 class="titel">glutenvrije producten</h1>
                 <br>
             </header>
             
