--- a/recepten.html
+++ b/recepten.html
@@ -4,13 +4,13 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>bezienswaardigheden over Parijs</title>
+        <title>glutenvrij recepten</title>
     </head>
     
     <body>
         <main>
             <header>
-                <h1>de lekkerste glutenvrije recepten</h1>
+                <h1 class="titel">de lekkerste glutenvrije recepten</h1>
                 <br>
             </header>
             
