--- a/coeliakie.html
+++ b/coeliakie.html
@@ -4,14 +4,14 @@
 
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>de geschiedenis over Parijs</title>
+        <title>coeliakie?</title>
         <meta charset="utf-8" />
     </head>
     
     <body>
         <main>
             <header>
-                <h1>coeliakie?</h1>
+                <h1 class="titel">coeliakie?</h1>
                 <br>
             </header>
             
