--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel" class="belangrijk">lekker glutenvrij</h1>
+                <h1 id="hoofdtitel" class="belangrijk titel">lekker glutenvrij</h1>
             </header>
             
             <nav>
