definitieve inlever versie
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/coeliakie.html
+++ b/coeliakie.html
@@ -15,6 +15,7 @@
                 <br>
             </header>
             
+            <!--dit is de navigatiebalk-->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,6 +26,7 @@
                 </ul>
             </nav>
             
+            <!--dit is de inhoud van de pagina-->
             <article>
             <h3>wat is coeliakie?</h3>
                 <img class="zweeflinks" src="afbeeldingen/prikbrood.jpg"><p> Coeliakie is een auto-immuunziekte die wordt geactiveerd als je gluten eet. Bij een auto-immuunziekte maakt je lichaam antistoffen tegen je eigen weefsels. als iemand met coeliakie gluten eet ontstaan er ontstekingsreacties in het darm- slijmvlies van de dunne darm, hierdoor kan iemand heftige klachten krijgen. Gluten zijn een eiwit dat vooral in granen voorkomt, zoals tarwe, rogge en gerst, spelt en kamut. Veel van deze granen worden verwerkt in ons voedsel, bijvoorbeeld in brood, koek en crackers. Mensen die deze ziekte niet hebben weten vaak niet dat er in zoveel producten gluten zitten. Als mensen erachter komen dat ze coeliakie hebben, kun je heel veel niet meer eten. Je moet een hele andere eet style gaan zoeken. En dat is vaak even wennen. Gelukkig komen er steeds meer producten op de markt zonder gluten, want ook steeds meer mensen krijgen deze auto-immuunziekte.</p>
