--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <h1 id="hoofdtitel" class="belangrijk titel">lekker glutenvrij</h1>
             </header>
             
+            <!--dit is de navigatiebalk-->
             <nav>
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
@@ -23,6 +24,7 @@
                 </ul>
             </nav>
             
+            <!--hier staat de introductie van de website per kopje-->
             <article>
             <img class="slide glutenfree" src="afbeeldingen/glutenfree.jpg">
             <h3 class="hoofd">coeliakie?</h3>
