--- a/recepten.html
+++ b/recepten.html
@@ -14,6 +14,7 @@
                 <br>
             </header>
             
+            <!--dit is de navigatiebalk-->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -23,6 +24,7 @@
                     <li><a href="producten.html">merken & producten</a></li>
                 </ul>
             </nav>
+            <!--dit is de inhoud van de pagina-->
 
             <article>
             <h3>granola met yoghurt</h3>
